--- a/src/utils/global.css
+++ b/src/utils/global.css
@@ -1,3 +1,40 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+h1 {
+    @apply p-1;
+    @apply text-2xl;
+    @apply font-bold;
+    @apply text-gray-500;
+}
+
+h2 {
+    @apply p-1;
+    @apply text-xl;
+    @apply font-bold;
+    @apply text-gray-600;
+}
+
+h3 {
+    @apply p-1;
+    @apply text-lg;
+    @apply font-bold;
+    @apply text-gray-700;
+}
+
+h4 {
+    @apply p-1;
+    @apply text-lg;
+    @apply font-bold;
+    @apply text-gray-700;
+}
+
+p * {
+    @apply text-gray-500;
+}
+
+a {
+    @apply text-blue-600;
+    @apply underline;
+}
