--- a/src/utils/global.css
+++ b/src/utils/global.css
@@ -63,7 +63,7 @@ a {
 .markdown .gatsby-code-title {
     display: block;
     position: relative;
-    background: #272822;
+    background: #fefffa;
     width: 100%;
     top: 10px;
     border-top-left-radius: 0.3em;
@@ -75,7 +75,7 @@ a {
     position: relative;
     font-family: Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace;
     color: #eee;
-    background: #777;
+    background: rgba(32, 156, 88, 0.418);
     border-top-left-radius: 0.3em;
     border-bottom-right-radius: 0.3em;
     padding: 3px;
@@ -114,5 +114,5 @@ a {
 }
 
 .markdown .grvsc-container {
-    z-index: -1;
+    z-index: 1;
 }
