--- a/src/utils/global.css
+++ b/src/utils/global.css
@@ -9,21 +9,21 @@
 }
 
 .markdown h2 {
-    @apply pt-3;
+    @apply pt-4;
     @apply text-xl;
     @apply font-bold;
     @apply text-black;
 }
 
 .markdown h3 {
-    @apply pt-2;
+    @apply pt-4;
     @apply text-lg;
     @apply font-bold;
     @apply text-black;
 }
 
 .markdown h4 {
-    @apply pt-1;
+    @apply pt-2;
     @apply text-lg;
     @apply font-bold;
     @apply text-black;
@@ -63,14 +63,23 @@ a {
 /* code */
 
 @import url('https://fonts.googleapis.com/css2?family=Fira+Code&display=swap');
+
+.markdown .grvsc-container {
+    @apply mx-2;
+    @apply mb-2;
+    @apply rounded;
+    z-index: 1;
+}
+
 .markdown .gatsby-code-title {
+    @apply mx-2;
     display: block;
     position: relative;
-    background: #fefffa;
-    width: 100%;
+    background: #272822;
     top: 10px;
     border-top-left-radius: 0.3em;
-    border-top-right-radius: 0.3em;
+    border-bottom-right-radius: 0.3em;
+    z-index: 2;
 }
 
 .markdown .gatsby-code-title span {
@@ -78,9 +87,9 @@ a {
     position: relative;
     font-family: 'Fira Code', monospace;
     color: #eee;
-    background: rgba(32, 156, 88, 0.418);
+    background: #777;
     border-top-left-radius: 0.3em;
-    border-bottom-right-radius: 0.3em;
+    border-top-right-radius: 0.3em;
     padding: 3px;
     top: 1px;
 }
@@ -94,29 +103,4 @@ a {
     padding-right: 1em;
     padding-left: 10px;
     border-left: 6px solid rgb(102, 207, 255);
-}
-
-.markdown .gatsby-code-title {
-    display: block;
-    position: relative;
-    background: #272822;
-    top: 10px;
-    border-top-left-radius: 0.3em;
-    border-top-right-radius: 0.3em;
-}
-
-.markdown .gatsby-code-title span {
-    display: inline;
-    position: relative;
-    font-family: 'Fira Code', monospace;
-    color: #eee;
-    background: #777;
-    border-top-left-radius: 0.3em;
-    border-bottom-right-radius: 0.3em;
-    padding: 3px;
-    top: 1px;
-}
-
-.markdown .grvsc-container {
-    z-index: 1;
 }
