--- a/src/utils/global.css
+++ b/src/utils/global.css
@@ -1,6 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+h1, h2, h3, h4, h5, h6, p, ul, ol {
+  font-family: "Helvetica Neue", "Helvetica", "Hiragino Sans", "Hiragino Kaku Gothic ProN", "Arial", "Yu Gothic", "Meiryo", sans-serif;
+}
+
 .markdown h1 {
   @apply pt-4;
   @apply text-2xl;
@@ -30,30 +35,45 @@
 }
 
 .markdown p {
-  @apply text-gray-700;
+  @apply leading-tight;
+  @apply text-gray-600;
 }
 
 a {
-  @apply text-blue-600;
+  @apply text-blue-500;
   @apply hover:underline;
 }
 
 .markdown img {
   @apply m-auto;
-  @apply p-2;
+  @apply py-2;
   max-width: 80%;
 }
 
 .markdown ol {
-  @apply list-decimal pl-10;
+  @apply list-decimal pl-6;
 }
 
 .markdown ul {
-  @apply list-disc pl-10;
+  @apply pl-6;
 }
 
-.markdown ul {
-  @apply list-disc pl-10;
+li {
+  list-style-type: none;
+  position: relative;
+  padding-left: 0.5em;
+}
+
+li:before {
+  border-radius: 50%;
+  width: 3px;
+  height: 3px;
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 0.8em;
+  content: "";
+  background: #888
 }
 
 .markdown .math-inline {
@@ -64,15 +84,16 @@ a {
 
 @import url("https://fonts.googleapis.com/css2?family=Fira+Code&display=swap");
 
+.code * {
+  font-family: "Fira Code", monospace;
+}
+
 .markdown .grvsc-container {
-  @apply mx-2;
-  @apply mb-2;
-  @apply rounded;
+  @apply my-2;
   z-index: 1;
 }
 
 .markdown .gatsby-code-title {
-  @apply mx-2;
   display: block;
   position: relative;
   background: #272822;
