--- a/src/utils/global.css
+++ b/src/utils/global.css
@@ -15,33 +15,30 @@ h1 {
   @apply pt-4;
   @apply text-2xl;
   @apply font-bold;
-  @apply text-black;
 }
 
 h2 {
   @apply pt-4;
   @apply text-xl;
   @apply font-bold;
-  @apply text-black;
 }
 
 h3 {
   @apply pt-4;
   @apply text-lg;
   @apply font-bold;
-  @apply text-black;
 }
 
 h4 {
   @apply pt-2;
   @apply text-lg;
   @apply font-bold;
-  @apply text-black;
 }
 
 p {
   @apply leading-tight;
   @apply text-gray-600;
+  @apply dark: text-white;
 }
 
 a {
