--- a/src/utils/global.css
+++ b/src/utils/global.css
@@ -11,15 +11,23 @@ ol {
   /* font-family: "Helvetica Neue", "Helvetica", "Hiragino Sans", "Hiragino Kaku Gothic ProN", "Arial", "Yu Gothic", "Meiryo", sans-serif; */
 }
 
+:root {
+  --header-color: text-primary-content;
+}
+
 a {
-  @apply link link-accent;
+  @apply text-info;
+}
+
+a:hover {
+  @apply underline;
 }
 
 h1 {
   @apply pt-4;
   @apply text-2xl;
   @apply font-bold;
-  @apply text-accent-content;
+  @apply var(--header-color);
 }
 
 h2 {
@@ -27,7 +35,7 @@ h2 {
   @apply text-xl;
   @apply font-bold;
   @apply mb-3;
-  @apply text-accent-content;
+  @apply var(--header-color);
 }
 
 h3 {
@@ -35,7 +43,7 @@ h3 {
   @apply text-lg;
   @apply font-bold;
   @apply mb-2;
-  @apply text-accent-content;
+  @apply var(--header-color);
 }
 
 h4 {
@@ -43,7 +51,7 @@ h4 {
   @apply text-lg;
   @apply font-bold;
   @apply mb-1;
-  @apply text-accent-content;
+  @apply var(--header-color);
 }
 
 p {
@@ -51,14 +59,8 @@ p {
   @apply leading-tight;
 }
 
-a:hover {
-  @apply underline;
-}
-
 img {
-  @apply m-auto;
   @apply my-4;
-  @apply py-2;
   width: 100%;
   height: auto;
 }
